cmake_minimum_required(VERSION 3.13)
project(bittorrent-client)
set(CMAKE_CXX_STANDARD 23)
file(GLOB_RECURSE SOURCE_FILES src/*.cpp src/*.hpp)
find_package(CURL REQUIRED)
find_package(OpenSSL REQUIRED)
add_executable(bittorrent ${SOURCE_FILES})
target_include_directories(bittorrent PRIVATE ${CURL_INCLUDE_DIRS})
target_link_libraries(bittorrent PRIVATE OpenSSL::Crypto ${CURL_LIBRARIES})
